   	part. Requested by AlexB.

   ?	Linux RPM options:

   	CFLAGS='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector
   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl


--1.75.26--

   *    Upgraded SQLite to 3.8.1.0

   !	Minor fixes to aclocal.m4 libmilter detection for debian.


--1.75.25--

   !	Fix SNERT_BERKELEY_DB handling of $d/include when there are no
	child db directories; particularly relevant when only BDB 1.85
	is installed (FreeBSD, NetBSD) caused and empty shell variable
	to generate an error.

   !	Added packet dump logging in pdq_name_copy() for buffer under/over
	errors in order to determine whether packets are mailformed (OxC0
	compression) or internal error. Reported by Alex Broens.


--1.75.24--

   *    Upgraded SQLite to 3.8.0.2

   !	Updated SNERT_BUILD_THREADED_SQLITE3 for latest SQLite build.

   ! 	Minor addition to ansi tool.

   !	Fix bug where an email address in the URI path info would be
	mistaken for URI authority and so cause a mis-parse of the URI.
	eg:

        http://scoaladesucces.ro/visa/acaro@gmx.de

	Reported by Alex Broens.

--1.75.23--

   !	Fix socket3_close() to address TIME_WAIT (socket zombie) issue
	by not calling shutdown SHUT_WR. Leave that to the application.
	TIME_WAIT handled by proper use of linger timeout.

	In the case of BarricadeMX:

	1. Make sure that socke close functions no longer do a shutdown
	   SHUT_WR as a default matter of course.
	2. Set linger timeout to 0 on new client connections, assumes
	   most connections drop by client or if dropped by application.
	3. On SMTP QUIT set the linger timeout to about 3 or so seconds
	   for a clean close.

	This LONG article helps clarify things...
	http://www.serverframework.com/asynchronousevents/2011/01/time-wait-and-its-design-implications-for-protocols-and-scalable-servers.html

	Thsi one explained linger more clearly...
	http://alas.matf.bg.ac.rs/manuals/lspe/snode=105.html
