@@ -11,6 +11,7 @@ core.*
 *.out
 *.tws
 *.sq3
+Reference
 
 # Files generated by autoconf.
 configure
