@@ -37,10 +37,8 @@ extern "C" {
 #endif
 
 #ifdef HAVE_UNISTD_H
-# ifdef __linux__
-#  /* See Linux man setresgid */
-#  define _GNU_SOURCE
-# endif
+# undef _GNU_SOURCE
+# define _GNU_SOURCE
 # include <unistd.h>
 #else
 # if defined(__BORLANDC__) && defined(HAVE_IO_H)
